--- a/app/src/main/res/layout/product_list.xml
+++ b/app/src/main/res/layout/product_list.xml
@@ -2,12 +2,12 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/note_list"
-    android:name="com.example.ilazar.mykeep.NoteListFragment"
+    android:id="@+id/product_list"
+    android:name="com.shop.betty.shopclient.ProductListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.shop.betty.shopclient.ProductListActivityO"
+    tools:context="com.shop.betty.shopclient.ProductListActivity"
     tools:listitem="@layout/product_list_content" />
