--- a/app/src/main/res/layout/product_list_content.xml
+++ b/app/src/main/res/layout/product_list_content.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="100dp"
+    android:orientation="vertical"
+    android:background="@drawable/border"
+    >
 
     <TextView
         android:id="@+id/product_name"
-        android:textSize="40dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/product_price"
-        android:textColor="#8800ff15"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/product_amount"
-        android:textColor="#8800f7ff"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
