--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/download"
+        android:src="@drawable/userpic"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"/>
 
