--- a/app/src/main/res/layout/product_list_content.xml
+++ b/app/src/main/res/layout/product_list_content.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/product_name"
+        android:textSize="32sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
